--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.32.7",
     "sirv-cli": "^1.0.0",
     "svelte": "^3.0.0"
   },
