--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "handlebars": "^4.7.7",
     "helper-markdown": "^1.0.0",
     "node-fetch": "^2.6.1"
