--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@what3words/api": "^3.1.1",
+    "axios": "^0.19.2",
     "cookie": "^0.4.1",
+    "faker": "^5.4.0",
     "handlebars": "^4.7.7",
     "helper-markdown": "^1.0.0",
+    "lodash": "^4.17.20",
     "node-fetch": "^2.6.1"
   }
 }
